Fix asyncpg skip: Use Python script for reliable filtering
Use Python heredoc script to filter asyncpg from requirements.txt
for Python 3.13. Add debug output to verify the filtering works.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,18 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel
         # Skip asyncpg on Python 3.13 as it doesn't build yet (not used in code)
         PYTHON_VERSION="${{ matrix.python-version }}"
+        echo "Python version: $PYTHON_VERSION"
         if [ "$PYTHON_VERSION" = "3.13" ]; then
           echo "Skipping asyncpg for Python 3.13"
-          grep -v "^asyncpg" requirements.txt > requirements_no_asyncpg.txt
+          python << EOF
+          with open('requirements.txt', 'r') as f:
+              lines = f.readlines()
+          with open('requirements_no_asyncpg.txt', 'w') as f:
+              for line in lines:
+                  if not line.strip().startswith('asyncpg'):
+                      f.write(line)
+          EOF
+          cat requirements_no_asyncpg.txt
           pip install -r requirements_no_asyncpg.txt
         else
           pip install -r requirements.txt
