--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,14 +40,7 @@ jobs:
         echo "Python version: $PYTHON_VERSION"
         if [ "$PYTHON_VERSION" = "3.13" ]; then
           echo "Skipping asyncpg for Python 3.13"
-          python -c "
-          with open('requirements.txt', 'r') as f:
-              lines = f.readlines()
-          with open('requirements_no_asyncpg.txt', 'w') as f:
-              for line in lines:
-                  if not line.strip().startswith('asyncpg'):
-                      f.write(line)
-          "
+          python -c "with open('requirements.txt', 'r') as f: lines = f.readlines(); f2 = open('requirements_no_asyncpg.txt', 'w'); [f2.write(line) for line in lines if not line.strip().startswith('asyncpg')]; f2.close()"
           cat requirements_no_asyncpg.txt
           pip install -r requirements_no_asyncpg.txt
         else
