--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,11 @@ jobs:
         python-version: '3.11'
         cache: 'pip'
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential python3-dev libpq-dev
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -162,6 +167,11 @@ jobs:
       with:
         python-version: '3.11'
         cache: 'pip'
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential python3-dev libpq-dev
 
     - name: Install dependencies
       run: |
