--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,18 +41,7 @@ jobs:
         if [ "$PYTHON_VERSION" = "3.13" ]; then
           echo "Skipping asyncpg for Python 3.13"
           # Filter out asyncpg line and replace sqlalchemy[asyncio] with sqlalchemy
-          python -c "
-          with open('requirements.txt', 'r') as f:
-              lines = f.readlines()
-          with open('requirements_no_asyncpg.txt', 'w') as f:
-              for line in lines:
-                  # Skip asyncpg lines
-                  if 'asyncpg' in line.lower():
-                      continue
-                  # Replace sqlalchemy[asyncio] with sqlalchemy
-                  line = line.replace('sqlalchemy[asyncio]', 'sqlalchemy')
-                  f.write(line)
-          "
+          python -c "import sys; lines = open('requirements.txt', 'r').readlines(); f = open('requirements_no_asyncpg.txt', 'w'); [f.write(line.replace('sqlalchemy[asyncio]', 'sqlalchemy')) for line in lines if 'asyncpg' not in line.lower()]; f.close()"
           cat requirements_no_asyncpg.txt
           pip install -r requirements_no_asyncpg.txt
         else
